@@ -82,6 +82,10 @@ query state of the music</td></tr>
 query the current music finished event</td></tr>
 
 
+<tr><td><a href=#get_pos>get_pos</a></td><td> -
+query music position</td></tr>
+
+
 <tr><td><a href=#get_volume>get_volume</a></td><td> -
 query music volume</td></tr>
 
@@ -145,6 +149,14 @@ When the music has finished playing, you can optionally have
 pygame place a user defined message on the event queue. If there
 is no callback event set, NOEVENT will be returned. Otherwise it
 will return the id of the current music finishe event.
+</ul><br>&nbsp;<br>
+
+<a name=get_pos><font size=+2><b>get_pos
+</b></font><br><font size=+1><tt>
+pygame.mixer.music.get_pos() -> val
+</tt></font><ul>
+Get the current (interpolated) time position of the music.
+Value is in ms, just like <a href=pygame_time.html#get_ticks>get_ticks()</a>.
 </ul><br>&nbsp;<br>
 
 <a name=get_volume><font size=+2><b>get_volume
