@@ -79,7 +79,7 @@ with my early design ideas</li>
 <li>TheCorruptor for his incredible logos and graphics</li>
 <li>Thanks to those sending in patches and fixes:
     Niki Spahiev, Gordon Tyler, Nathaniel Pryce, 
-    Dave Wallace, John Popplewell</li>
+    Dave Wallace, John Popplewell, Michael Urman</li>
 <li>And our bug hunters above and beyond:
     Angus, Guillaume Proux, Frank Raiser,
     Austin Henry, Kaweh Kazemi, Arturo Aldama,
